<resources>
    <string name="main_header">DogeWalk</string>
    <string name="app_name">DogeWalk</string>
    <string name="title_home">Home</string>
    <string name="title_photo">Photo</string>
    <string name="title_record">Record</string>
    <string name="title_quest">Quest</string>

    <string name="game_services_project_id" translatable="false">601775852778</string>
    <string name="leaderboard_id" translatable="false">CgkI6pmL5cEREAIQAQ</string>
    <string name="maps_api_key">AIzaSyBBzPMiSQlfgcnZkuP_g45oYJS11wmi9Sc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--achievement 3x Streak-->
    <string name="achievement_3x_streak" translatable="false">CgkI6pmL5cEREAIQAw</string>
    <!--achievement 5x Streak-->
    <string name="achievement_5x_streak" translatable="false">CgkI6pmL5cEREAIQBA</string>
    <!--achievement 7x Streak-->
    <string name="achievement_7x_streak" translatable="false">CgkI6pmL5cEREAIQBQ</string>
    <!--achievement 3-Week Streak-->
    <string name="achievement_3week_streak" translatable="false">CgkI6pmL5cEREAIQBg</string>
    <!--achievement 4-Week Streak-->
    <string name="achievement_4week_streak" translatable="false">CgkI6pmL5cEREAIQBw</string>
    <!--achievement 5-Week Streak-->
    <string name="achievement_5week_streak" translatable="false">CgkI6pmL5cEREAIQCA</string>
    <!--achievement 10x 10000 Steps-->
    <string name="achievement_10x_10000_steps" translatable="false">CgkI6pmL5cEREAIQCQ</string>
    <!--achievement 20x 10000 Steps-->
    <string name="achievement_20x_10000_steps" translatable="false">CgkI6pmL5cEREAIQCg</string>
    <!--achievement 30x 10000 Steps-->
    <string name="achievement_30x_10000_steps" translatable="false">CgkI6pmL5cEREAIQCw</string>
    <!--achievement Landmark-OLD-->
    <string name="achievement_landmarkold" translatable="false">CgkI6pmL5cEREAIQDA</string>
    <!--achievement Landmark-Forest-->
    <string name="achievement_landmarkforest" translatable="false">CgkI6pmL5cEREAIQDQ</string>
    <!--achievement Landmark-The Gate-->
    <string name="achievement_landmarkthe_gate" translatable="false">CgkI6pmL5cEREAIQDg</string>
    <!--achievement Landmark-SNU-->
    <string name="achievement_landmarksnu" translatable="false">CgkI6pmL5cEREAIQDw</string>
    <!--achievement Expedition Travler-->
    <string name="achievement_expedition_travler" translatable="false">CgkI6pmL5cEREAIQEA</string>
    <!--achievement Expedition 1km-->
    <string name="achievement_expedition_1km" translatable="false">CgkI6pmL5cEREAIQEQ</string>
    <!--achievement Expedition 2km-->
    <string name="achievement_expedition_2km" translatable="false">CgkI6pmL5cEREAIQEg</string>
    <!--achievement Expedition 3km-->
    <string name="achievement_expedition_3km" translatable="false">CgkI6pmL5cEREAIQEw</string>
    <!--achievement Expedition 5km-->
    <string name="achievement_expedition_5km" translatable="false">CgkI6pmL5cEREAIQFA</string>
    <!--achievement The First Launch-->
    <string name="achievement_the_first_launch" translatable="false">CgkI6pmL5cEREAIQFQ</string>
    <!--achievement To the Moon-->
    <string name="achievement_to_the_moon" translatable="false">CgkI6pmL5cEREAIQFg</string>
    <!--achievement Abstaining-->
    <string name="achievement_abstaining" translatable="false">CgkI6pmL5cEREAIQFw</string>
    <!--achievement Photographer-->
    <string name="achievement_photographer" translatable="false">CgkI6pmL5cEREAIQGA</string>
    <!--achievement Love Yourself-->
    <string name="achievement_love_yourself" translatable="false">CgkI6pmL5cEREAIQGQ</string>
    <!--achievement Socializer-->
    <string name="achievement_socializer" translatable="false">CgkI6pmL5cEREAIQGg</string>
    <!--leaderboard Experience Point-->
    <string name="leaderboard_experience_point" translatable="false">CgkI6pmL5cEREAIQAQ</string>



    <string name="sug0_click">서울의 허파, 남산의 가을을 만끽할 수 있는 길이다.</string>
    <string name="sug1_click">안산 둘레를 따라 조성된 무장애 순환탐방로다.</string>
    <string name="sug2_click">관악산 내에 위치한 자락길로 전체구간이 완만하고 보행약자를 위해 무장애로 조성하였다.</string>


    <string name="sug0">서울의 허파, 남산의 가을을 만끽할 수 있는 길이다. 케이블카 승강장을 지나 올라가다 보면 남산공원 방향 횡단보도가 나오는데, 그곳을 건너면 쉽게 무장애길에 진입할 수 있다. 횡단보도에는 음성신호기가 설치되어 있고, 점자 유도블록으로 산책로까지의 진로를 안내하고 있다. 물론 남산순환나들길 내부에도 점자 유도블록이 완비되어 있다. 그를 따라 걷다 보면 맑은 물소리가 귓가를 흐른다. 은은한 나무 향기와 함께 가을의 운치를 더하는 자연의 효과음이다. 이 길은 오직 사람을 위한 구간이다. 차는 물론 자전거도 다닐 수 없다. 그렇기에 특히 시각장애인이 안심하고 거닐 수 있다. 실제 걸어본 결과, 안전도가 매우 높았다. 이 길은 본래 자동차가 다니던 도로였으나 1991년 서울시가 산책길로 바꿨다. 그 덕에 휠체어 두세 대가 나란히 지나갈 수 있을 정도로 폭이 넉넉하다. 또 휠체어 보행자를 위한 전망대도 있어 소외감 없이 경관을 감상할 수도 있다. 장애인 화장실도 구비되어 있다. 야경 감상을 목적으로 한다면 밤에 거닐어도 좋다. 단지 숲이 우거져 가로등의 밝기가 부족할 수 있다. 완주하는 데 대략 1시간 남짓이며 와룡묘, 남산 한옥마을 입구, 국립극장 등을 잇는 3.4km 코스라 산책뿐 아니라 일상의 나들이를 즐기기에도 좋다.</string>
    <string name="sug1">안산 둘레를 따라 조성된 무장애 순환탐방로다. 이진아기념도서관, 독립공원 등을 탐방로를 찾기 위한 랜드마크로 안내하고 있지만, ‘서대문유스센터’를 기준으로 삼는 것이 더 편리하다. 물론 무장애 탐방로로 진입하기도 수월하다. 길 초입에 대여소가 있어 필요하다면 휠체어나 유모차를 무료로 빌릴 수 있다. 길의 경사는 전체적으로 매우 완만하다. 천천히 거닐며 서울 시내 곳곳을 조망하는 여유를 만끽해도 좋을 것이다. 장애인 화장실과 전동휠체어 충전 장소 등의 편의시설도 구비되어 있다. 단지 아쉬운 부분이 몇 가지 있다. 첫째는 탐방로 초반의 정비 미흡이다. 길이 바로 데크로드가 시작되는 건 아니고 아스팔트 포장 도로가 먼저 나온다. 그러나 나뭇가지와 낙엽 등으로 어지러워 장애인 보행에 다소 지장이 있다. 꽤 굵은 나뭇가지도 심심치 않게 있으니 주의가 필요하다. 둘째는 차량의 위협이다. 분명 초입에 ‘보행자 전용도로’라는 표지가 있음에도 불구하고 이따금 오토바이가 지나가곤 한다. 또한 몇몇 구간의 전망대는 휠체어 접근이 어렵다는 점도 아쉬움으로 남는다. 거리는 7km이며 완주에는 대략 2시간 30분 정도가 걸린다. 장거리 코스인 만큼 곳곳에 쉼터가 마련되어 있으니 참고하면 좋다.</string>
    <string name="sug2">관악구 관악산 내에 위치한 자락길로 전체구간이 완만하여 누구나 이용가능한 노선으로 보행약자를 위해 무장애로 조성하였다 1.3km로 30분이면 노선을 통과할 수 있으며 대체적으로 완만하며 낮은 코스로 진행이 된다. 서울대학교 버스정류장에서 관악산 등산로 입구를 통하여 제2광장 화장실 부근에 도착하면 관악산자락길(무장애숲길)구간이 시작된다.</string>


    <string name="sug0_title">남산순환나들길</string>
    <string name="sug1_title">서대문 안산자락길</string>
    <string name="sug2_title">관악산 자락길</string>

    <string name="sug0_link">https://gil.seoul.go.kr/walk/course/dulae_gil.jsp?c_idx=248</string>
    <string name="sug1_link">https://gil.seoul.go.kr/m/course/dulae_gil_view.jsp?course=3000&amp;c_idx=262</string>
    <string name="sug2_link">https://gil.seoul.go.kr/m/course/dulae_gil_view.jsp?course=3000&amp;c_idx=282</string>

    <string name="gmap_api_key">AIzaSyDt29SvRevnSbqqreEtybuMVuZJL0EwN7s</string>
</resources>