<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/guide_text"
            android:text="Scroll to view different places. Touch the text to read more, or touch the photo to go to the map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:lineSpacingMultiplier="1.2"

            android:gravity="center"
            android:textAlignment="center"
            android:paddingBottom="10dp"
            android:textStyle="bold"
            android:background="@drawable/view_grey200" />


        <LinearLayout
            android:id="@+id/sug0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"

            android:background="@drawable/view_magenta0">

            <TextView
                android:id="@+id/sug0_title"
                android:text="@string/sug0_title"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"


                android:textColor="@color/white"
                android:textSize="28sp"

                android:gravity="center"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textAllCaps="true" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sug0_img"
                android:background="@drawable/namsan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="10dp"

                android:layout_gravity="center"
                android:adjustViewBounds="true"
                />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sug0_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/sug0_click"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="28sp"
                android:background="@drawable/view_grey200"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sug1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"

            android:background="@drawable/button_blue0">

            <TextView
                android:id="@+id/sug1_title"
                android:text="@string/sug1_title"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"


                android:textColor="@color/white"
                android:textSize="28sp"

                android:gravity="center"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textAllCaps="true" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sug1_img"
                android:background="@drawable/sug1"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"

                android:layout_gravity="center"
                android:adjustViewBounds="true"
                />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sug1_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/sug1_click"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="28sp"
                android:background="@drawable/view_grey200"
                />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/sug2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"

            android:background="@drawable/button_purple0">

            <TextView
                android:id="@+id/sug2_title"
                android:text="@string/sug2_title"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"


                android:textColor="@color/white"
                android:textSize="28sp"

                android:gravity="center"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textAllCaps="true" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sug2_img"
                android:background="@drawable/sug2"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"

                android:layout_gravity="center"
                android:adjustViewBounds="true"
                />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/sug2_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/sug2_click"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="28sp"
                android:background="@drawable/view_grey200"
                />

        </LinearLayout>

    </LinearLayout>
</ScrollView>
